--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.59.3",
     "react-native-gesture-handler": "^1.2.1",
     "react-native-router-flux": "^4.0.6",
+    "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.9.1",
     "react-viro": "2.14.0"
   },
@@ -26,5 +27,10 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "": {
+    "assets": [
+      "./assets/fonts"
+    ]
   }
 }
