--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react-native": "0.59.3",
     "react-native-gesture-handler": "^1.2.1",
     "react-native-router-flux": "^4.0.6",
+    "react-native-svg": "^9.4.0",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.9.1",
-    "react-viro": "2.14.0"
+    "react-viro": "2.14.0",
+    "svg.js": "^2.7.1"
   },
   "devDependencies": {
     "@babel/core": "7.4.4",
@@ -27,10 +29,5 @@
   },
   "jest": {
     "preset": "react-native"
-  },
-  "": {
-    "assets": [
-      "./assets/fonts"
-    ]
   }
 }
