--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "react-native-gesture-handler": "^1.2.1",
     "react-native-router-flux": "^4.0.6",
     "react-native-svg": "^9.4.0",
-    "react-native-vector-icons": "^6.4.2",
+    "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^3.9.1",
+    "react-redux": "^7.0.3",
     "react-viro": "2.14.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "svg.js": "^2.7.1"
   },
   "devDependencies": {
