--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "react-native-svg": "^9.4.0",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.9.1",
+    "react-redux": "^7.0.3",
     "react-viro": "2.14.0",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "svg.js": "^2.7.1"
   },
   "devDependencies": {
@@ -26,7 +30,8 @@
     "babel-jest": "24.7.1",
     "jest": "24.7.1",
     "metro-react-native-babel-preset": "0.53.1",
-    "react-test-renderer": "16.8.3"
+    "react-test-renderer": "16.8.3",
+    "redux-devtools-extension": "^2.13.8"
   },
   "jest": {
     "preset": "react-native"
