--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.3",
+    "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.2.1",
     "react-native-router-flux": "^4.0.6",
     "react-native-svg": "^9.4.0",
