--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native": "0.59.3",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.2.1",
+    "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-router-flux": "^4.0.6",
     "react-native-svg": "^9.4.0",
     "react-native-vector-icons": "^6.4.2",
